# ChangeLog for sci-astronomy/poloka
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*poloka-0.8.0 (29 Feb 2012)

  29 Feb 2012; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.6.3.ebuild,
  +poloka-0.8.0.ebuild, metadata.xml:
  Version bump

*poloka-0.6.3 (03 Aug 2011)

  03 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.4.3.ebuild,
  +poloka-0.6.3.ebuild:
  Version bump. Switched to EAPI4

*poloka-0.4.3 (08 Feb 2011)

  08 Feb 2011; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.4.1.ebuild,
  +poloka-0.4.3.ebuild:
  Bump

*poloka-0.3.6 (04 Oct 2010)

  04 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.3.1.ebuild,
  +poloka-0.3.6.ebuild:
  Version bump

*poloka-0.3.0 (27 Aug 2010)

  27 Aug 2010; Sébastien Fabbro <bicatali@gentoo.org> -poloka-0.2.1.ebuild,
  +poloka-0.3.0.ebuild, metadata.xml:
  Initial import
