@@ -1,4 +1,14 @@
-DIST poloka-0.8.0.tar.gz 1223219 RMD160 8219fd1583f69d304db15f32c774e900470fbfc2 SHA1 c8e287a145bdd8b85022e709a92a0fd8c644adab SHA256 2c1262aca02163ff91de0a7ed2cb36c816c71c32cd7776ad21edbeee5eef4ab9
-EBUILD poloka-0.8.0.ebuild 1063 RMD160 05eba8fb2d7b499efc8e43443861d0f056f30a57 SHA1 1252ac123f23b42f40e8bda1bf3c06e6c02772a7 SHA256 ea87897f0599d9a335fbd769d57b4562ccd92f622b7047e2ae53ba82b780d786
-MISC ChangeLog 892 RMD160 2e0d75b9dc68963fcea3a3dadd4ec2a80eef139b SHA1 389384183908e0253386f4bbdd694fbd5cecf2b0 SHA256 77d13a7185f8a1558cea84cdaf942c3fb42edabac3c33a250ac720efbb82d83d
-MISC metadata.xml 829 RMD160 2e35457353b21e2aac96a25aac3ea741fa23160c SHA1 55cbac133e5e17bac7355669c97fe859201c230a SHA256 eda5dc1354cabbd9628b5f92a1cd89f905e24485f71eedb5193b2bde2b2b4a89
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST poloka-0.8.0.tar.gz 1223219 SHA256 2c1262aca02163ff91de0a7ed2cb36c816c71c32cd7776ad21edbeee5eef4ab9
+EBUILD poloka-0.8.0.ebuild 1107 SHA256 f97c89ea24f957e58b63d595b01c775b63b0ba4a71944bf0400c9e005fdc0506 SHA512 ffaf4432958c0ae00da43e1dbf03d8cb99ea261c3bfe18c5e44f1748db6c3b80ba7d4f9aefa9fc31dbb829abbe6b5156af3a30826d66977ee4b7ac7c43709e01 WHIRLPOOL a2a5fb79a9c24734b753e91f684c0bb7bf89ab15f23cae64be5fed120ba49f1c9cc05c6a7693f03eb3d8967fd17d6d95f58bef99c7d6214718bca98271c30663
+MISC ChangeLog 892 SHA256 77d13a7185f8a1558cea84cdaf942c3fb42edabac3c33a250ac720efbb82d83d SHA512 176af00771bbac2fa64fc23c599852e20e9f86af4c6325be683ccef6d6352ea1ced2685c067789a652c6468f8216a6569da45da4993dd5e637d974f3ebdaec65 WHIRLPOOL f8b3f71f6a2f2af5c4286a63b91eb3231267f273ad38d1c51608343b28fbe80633d9d7d920a513bb62e6b070e09bbabdf2d94f21197c0ea3858e1e006f5fba45
+MISC metadata.xml 829 SHA256 eda5dc1354cabbd9628b5f92a1cd89f905e24485f71eedb5193b2bde2b2b4a89 SHA512 97cd360f5225c16d0f0d5440d41dd2f71ca60827c2438a03d35c0913527a3e038d0afcbdaced278537b9cf8a1e18982ee85356adf0e938c1ac382fdd5ab2b468 WHIRLPOOL 51fba3f00bb1c15605dd4c074b670b122bf0749450ab9a25feefb60f1e80f7c041d0f3b6f961d7f9ea48e493e763c5dc5770db135762c93b5888eb8c7af5caa2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlAVgHsACgkQ1ycZbhPLE2DYiQCffmKVopCd8kBXrgEavLiTxtYb
+8s4An1dLGJxfw2XiGh9gGB2dhL21K6Gm
+=onk+
+-----END PGP SIGNATURE-----
